feat: add play next and play previous

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .playerProgress {
       opacity: 0.5;
     }
   }
@@ -110,6 +110,7 @@
 
     &:disabled {
       cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled) {
